# Project_Onuky

./: .gitignore  README.md  address.py  addressbook.pkl  addressbook.py  birthday.py  help_info.py  main.py  name.py  notes.py  onuky.py  phone.py  practice.py  pyproject.toml  record.py  requirements.txt  setup.py  storage.py  user_email.py
command_handlers/: handlers.py  input_error.py
libraries/: address.py  addressbook.py  birthday.py  help_info.py  name.py  notes.py  phone.py  record.py  storage.py  user_email.py  wordcompleter.py
source/: __main__.py  main.py
source/command_handlers/: handlers.py  input_error.py
source/libraries/: address.py  birthday.py  help_info.py  name.py  notes.py  phone.py  record.py  storage.py  user_email.py  wordcompleter.py
source/modules/: address.py  birthday.py  name.py  notes.py  phone.py  record.py  storage.py  user_email.py
